--- a/openfisca_pf/parameters/daf/redevance_domaniale/commune_prive/com474.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/commune_prive/com474.yaml
@@ -1,4 +1,4 @@
-description: Valeur vénale de Taiarapu - Taiarapu-Est
+description: Valeur vénale de Tautira - Taiarapu-Est
 zone_bord_de_mer:
   valeur_venale:
     values:
