--- a/openfisca_pf/parameters/dicp/cst_s/taux.yaml
+++ b/openfisca_pf/parameters/dicp/cst_s/taux.yaml
@@ -24,48 +24,64 @@ brackets:
 - rate:
     2013-07-16:
       value: 0.07
+    2022-01-01:
+      value: 0.09
   threshold:
     2013-07-16:
       value: 400000
 - rate:
     2013-07-16:
       value: 0.09
+    2022-01-01:
+      value: 0.11
   threshold:
     2013-07-16:
       value: 700000
 - rate:
     2013-07-16:
       value: 0.12
+    2022-01-01:
+      value: 0.15
   threshold:
     2013-07-16:
       value: 1000000
 - rate:
     2013-07-16:
       value: 0.15
+    2022-01-01:
+      value: 0.18
   threshold:
     2013-07-16:
       value: 1250000
 - rate:
     2013-07-16:
       value: 0.18
+    2022-01-01:
+      value: 0.21
   threshold:
     2013-07-16:
       value: 1500000
 - rate:
     2013-07-16:
       value: 0.21
+    2022-01-01:
+      value: 0.24
   threshold:
     2013-07-16:
       value: 1750000
 - rate:
     2013-07-16:
       value: 0.23
+    2022-01-01:
+      value: 0.26
   threshold:
     2013-07-16:
       value: 2000000
 - rate:
     2013-07-16:
       value: 0.25
+    2022-01-01:
+      value: 0.28
   threshold:
     2013-07-16:
       value: 2500000
